# urbex-mapping

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  data.json  db.py  index.html  main.py  oblivionstate.py  pyproject.toml  query.py  reddit.py  requirements.txt  tags.py  test.py  web.py  whateversleft.py  wordpress.py  xenforo.py  xxviii_dayslater.py
src/: config.py  db_base.py  db_tables.py  index.html  main.py  reddit.py  spider.py  tags.py  xenforo.py
src/urbex/: config.py  db.py  db_base.py  db_tables.py  latest.html  main.py  spider.py  web.py  wordpress.py  xenforo.py
src/urbex/static/: index.js
static/: index.js
tests/: 28dl_error.html  28dl_section.html  28dl_thread.html  test_spider.py  test_wordpress.py  test_xenforo.py  wp_post.json  wp_posts.json  wp_posts_error.json
