[tool.poetry]
name = "urbex-map"
version = "0.1.0"
description = ""
authors = ["wertyuiop408 <wertyuiop408@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
geopy = "^2.2.0"
praw = "^7.6.0"
psaw = "^0.1.0"
Flask = "^2.2.2"
hvac = "^0.11.2"
tomlkit = "^0.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
