[tool.poetry]
name = "urbex"
version = "0.1.0"
description = ""
authors = ["wertyuiop408 <wertyuiop408@users.noreply.github.com>"]
license = "MIT"
packages = [{include = "urbex", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
geopy = "^2.2.0"
praw = "^7.6.0"
psaw = "^0.1.0"
Flask = "^2.2.2"
hvac = "^0.11.2"
tomlkit = "^0.11.4"
SQLAlchemy = "^2.0.7"
aiohttp = "^3.8.3"
lxml = "^4.9.2"
sqlalchemy-stubs = "^0.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
monkeytype = "^22.2.0"
pre-commit = "^3.2.2"
isort = "^5.12.0"
creosote = "^2.6.0"
coverage = "^7.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
aioresponses = "^0.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlmypy"

[tool.pytest.ini_options]
pythonpath=["src/urbex"]
asyncio_mode="auto"

[tool.isort]
profile = "black"